Completed the project

--- a/CountDown-Timer/index.html
+++ b/CountDown-Timer/index.html
@@ -24,7 +24,7 @@
                 <p class="small-text">days</p>
             </div>
             <div class="hours-show">
-                <p class="big-text" id="hours">0</p>
+                <p class="big-text" id="hours">0<span class="am-or-pm">am</span></p>
                 <p class="small-text">hours</p>
             </div>
             <div class="min-show">
