--- a/User-Youtube-API/index.html
+++ b/User-Youtube-API/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spotify API</title>
+    <title>Youtube API videos</title>
 </head>
 <body>
-    <button class="btn btn-primary">Login Spotify</button>
-    <script src="js/app.js"></script>
+    
+    <script src="app.js"></script>
 </body>
 </html>
