--- a/Expense Tracker/index.html
+++ b/Expense Tracker/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -28,12 +27,12 @@
 
       <h3>History</h3>
       <ul id="list" class="list">
-        <li class="minus">
+        <!-- <li class="minus">
           Payment <span>-$400</span><button class="delete-btn">x</button>
-        </li>
+        </li>`
         <li class="plus">
           Cash <span>$400</span><button class="delete-btn">x</button>
-        </li>
+        </li> -->
       </ul>
 
       <h3>Add new transaction</h3>
@@ -55,7 +54,7 @@
       </form>
     </div>
     
-    <script src="class.js"></script>
+    <!-- <script src="class.js"></script> -->
     <script src="app.js"></script>
   </body>
 </html>
