--- a/Music Player/index.html
+++ b/Music Player/index.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
     <title>Music Player</title>
 </head>
 <body>
 
+    <h1>Music Player</h1>
+
     <div class="music-container" id="music-container">
         <div class="music-info">
-            <h4 id="title"></h4>
+            <h4 id="title">Summer</h4>
             <div class="progress-container" id="progress-container">
                 <div class="progress" id="progress"></div>
             </div>
