--- a/Music Player/index.html
+++ b/Music Player/index.html
@@ -20,7 +20,7 @@
             </div>
         </div>
 
-        <audio src="music/summer.mp3" id="audio"></audio>
+        <audio id="audio"></audio>
 
         <div class="img-container">
             <img src="images/summer.jpg" alt="music-cover" id="cover">
