--- a/Ecommerce Website/index.html
+++ b/Ecommerce Website/index.html
@@ -82,7 +82,7 @@
                 <span class="cart-quantity cart-header cart-column">QUANTITY</span>
             </div>
             <div class="cart-items">
-                <div class="cart-row" id="item-1">
+                <!-- <div class="cart-row" id="item-1">
                     <div class="cart-item cart-column">
                         <img class="cart-item-image" src="images/Shirt.png" width="100" height="100">
                         <span class="cart-item-title">T-Shirt</span>
@@ -100,10 +100,10 @@
                     </div>
                     <span class="cart-price cart-column">$9.99</span>
                     <div class="cart-quantity cart-column">
-                        <input class="cart-quantity-input" type="number" value="2" min="0" max="100">
+                         <input class="cart-quantity-input" type="number" value="2" min="0" max="100">
                         <button class="btn btn-danger" type="button">REMOVE</button>
                     </div>
-                </div>
+                </div> -->
             </div>
             <div class="cart-total">
                 <strong class="cart-total-title">Total</strong>
@@ -134,5 +134,6 @@
             </div>
         </footer>
     </body>
+    <script src="https://code.jquery.com/jquery-3.6.0.slim.js" integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY=" crossorigin="anonymous"></script>
     <script src="js/app.js"></script>
 </html>
